# cpp-revision

./: .gitignore  README.md
1. Feynmans technique/: Exceptions in C++.pptx  Extern keyword C++.pptx  File Streams C++.pptx  The Static Keyword C++.pptx
C++11 Init/: CMakeLists.txt  main.cpp
CMake Testing/: CMakeLists.txt  Test  main.cpp
Chrono/: CMakeLists.txt  main.cpp
Exceptions/: main.cpp
FPtrs Functors Lambda/: CMakeLists.txt  MyFunctor.h  main.cpp  maths.cpp  maths.h
File Streams/: food.txt  main.cpp
Friend/: CMakeLists.txt  SomeClass.cpp  SomeClass.h  main.cpp
Lists/: main.cpp
Maps/: main.cpp
Maps and Multimaps/: main.cpp
Move Ctor & Assignment/: CMakeLists.txt  Test.cpp  Test.h  main.cpp
MultiMaps/: main  main.cpp
Overloading = and Copy Ctors/: Makefile  Person.cpp  Person.hpp  main  main.cpp
Overloading = and Copy Ctors MAKE/: Makefile  Person.cpp  Person.hpp  main.cpp
RValue and LValue References/: CMakeLists.txt  main.cpp
Sets/: main.cpp  sets
Smart Pointers/: CMakeLists.txt  main.cpp
Static/: ExampleClass.cpp  ExampleClass.hpp  OutsideClass.cpp  OutsideClass.hpp  main.cpp
TEST/: CMakeLists.txt
Typedef Decltype Enum/: CMakeLists.txt  main.cpp
casting/: main.cpp
multithreading/: CMakeLists.txt  main.cpp
templates/: CMakeLists.txt  MyTemplate.h  MyTemplate.tpp  main.cpp
